@@ -1,3 +1,8 @@
+2012-12-24  Lars Ingebrigtsen  <larsi@gnus.org>
+
+	* gnus.texi (Browse Foreign Server): Document
+	`gnus-browse-delete-group'.
+
 2012-12-21  Glenn Morris  <rgm@gnu.org>
 
 	* auth.texi, epa.texi, gnus-coding.texi, sasl.texi:
